--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.2.10
 Django==3.0.8
-pkg-resources==0.0.0
+django-3-jet==1.0.8
+psycopg2==2.8.5
 pytz==2020.1
+six==1.15.0
 sqlparse==0.3.1
