--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.2.10
 Django==3.0.8
 django-3-jet==1.0.8
+Pillow==7.2.0
+pkg-resources==0.0.0
 psycopg2==2.8.5
 pytz==2020.1
 six==1.15.0
