--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ cryptography==3.0
 defusedxml==0.7.0rc1
 Django==3.0.8
 django-3-jet==1.0.8
+djangorestframework==3.11.1
 idna==2.10
 oauthlib==3.1.0
 Pillow==7.2.0
+pkg-resources==0.0.0
 psycopg2==2.8.5
 pycparser==2.20
 PyJWT==1.7.1
